Fixed noac article layout and blockquote readability

--- a/assets/custom/css/style.css
+++ b/assets/custom/css/style.css
@@ -112,7 +112,7 @@ a:focus, a:hover {
 }
 blockquote {
   font-style: italic;
-  color: #868e96;
+  color: #26394c;
 }
 iframe {
   margin-bottom: 0.5rem;
